improve viz-js.html doc

--- a/viz-js.html
+++ b/viz-js.html
@@ -63,8 +63,7 @@ Element providing solution to render Graphviz on the web. Uses the https://githu
       engine: "dot",       	 
 
       /**
-       * The `fireLasers` method will fire the lasers. At least
-       * it will dispatch an event that claims lasers were fired :)
+       * The `dotcontentChanged` method renders the diagram when the dotcontent attribute is updated.
        *
        * @method dotcontentChanged
        */      
