--- a/viz-js.html
+++ b/viz-js.html
@@ -10,7 +10,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-image/iron-image.html">
-<script src="viz.js"></script>
+<script src="../viz.js/viz.js"></script>
 <!--
 Element providing solution to render Graphviz on the web. Uses the https://github.com/mdaines/viz.js
 
