Updated demo and tests

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
     <!-- 1. Load platform support before any code that touches the DOM. -->
     <script src="../webcomponentsjs/webcomponents.js"></script>
     <!-- 2. Load the component using an HTML Import -->
-    <link rel="import" href="viz-js.html">
+    <link rel="import" href="../viz-js.html">
 </head>
 
 <body unresolved>
