--- a/viz-js.html
+++ b/viz-js.html
@@ -20,7 +20,7 @@ Element providing solution to render Graphviz on the web. Uses the https://githu
 
 @element viz-js
 @blurb Element providing solution to no problem in particular.
-@status alpha
+@demo demo/index.html
 @homepage http://tzolov.github.io/viz-js
 -->
 <dom-module id="viz-js">
